Add link to second recipe

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <a href="recipes/frenchtoast.html">Fluffy French Toast</a>
 
+    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+
 </body>
 
 </html>
