--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <a href="recipes/lasagna.html">World's Best Lasagna</a>
 
+    <a href="recipes/chicken-noodlesoup.html">Quick and Easy Chicken Noodle Soup</a>
+
 </body>
 
 </html>
