--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 
 <body>
+
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/frenchtoast.html">Fluffy French Toast</a>
+    <ul>
+    <li><a href="recipes/frenchtoast.html">Fluffy French Toast</a></li>
 
-    <a href="recipes/lasagna.html">World's Best Lasagna</a>
+    <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
 
-    <a href="recipes/chicken-noodlesoup.html">Quick and Easy Chicken Noodle Soup</a>
+    <li><a href="recipes/chicken-noodlesoup.html">Quick and Easy Chicken Noodle Soup</a></li>
+    </ul>
 
 </body>
 
