--- a/recipes/chicken-noodlesoup.html
+++ b/recipes/chicken-noodlesoup.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Quick and Easy Chicken Noodle Soup</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2014%2F12%2F4545057.jpg" alt="Quick and Easy Chicken Noodle Soup">
+        <img src="../images/soup.jpg" alt="Quick and Easy Chicken Noodle Soup">
 
         <h3>Description</h3>
         <p>When you don't have time to make your soup totally from scratch, this is a very easy, very good substitute.</p>
