--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Fluffy French Toast</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F02%2Ffluffy-french-toast.jpg" alt="Fluffy French Toast">
+        <img src="../images/frenchtoast.jpg">
 
         <h3>Description</h3>
         <p>This French toast recipe is different because it uses flour. I have given it to some friends and they've all liked it better than the French toast they usually make!</p>
