--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>World's Best Lasagna</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F07%2F11%2Fworlds-best-lasagna.jpeg" alt="World's Best Lasagna">
+        <img src="../images/lasagna.jpg" alt="World's Best Lasagna">
 
         <h3>Description</h3>
         <p>It takes a little work, but it is worth it.</p>
