--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <head>
     <title>Odin Recipes</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div>
     <h1>Odin Recipes</h1>
+    </div>
 
     <ul>
-    <li><a href="recipes/frenchtoast.html">Fluffy French Toast</a></li>
+    <li class="link"><a href="recipes/frenchtoast.html">Fluffy French Toast</a></li>
 
-    <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+    <li class="link"><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
 
-    <li><a href="recipes/chicken-noodlesoup.html">Quick and Easy Chicken Noodle Soup</a></li>
+    <li class="link"><a href="recipes/chicken-noodlesoup.html">Quick and Easy Chicken Noodle Soup</a></li>
     </ul>
 
 </body>
