--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,17 @@
     <head>
         <title>World's Best Lasagna</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <h1>World's Best Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="World's Best Lasagna">
 
-        <h3>Description</h3>
+        <h3 class="header">Description</h3>
         <p>It takes a little work, but it is worth it.</p>
    
-        <h3>Ingredients</h3>
+        <h3 class="header">Ingredients</h3>
         <ul>
             <li>1 pound sweet italian sausage</li>
             <li>3/4 pound lean ground beef</li>
@@ -36,7 +37,7 @@
             <li>3/4 cup grated Parmesan cheese</li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="header">Steps</h3>
         <ol>
             <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. 
                 Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
