--- a/recipes/chicken-noodlesoup.html
+++ b/recipes/chicken-noodlesoup.html
@@ -10,10 +10,10 @@
         <h1>Quick and Easy Chicken Noodle Soup</h1>
         <img src="../images/soup.jpg" alt="Quick and Easy Chicken Noodle Soup">
 
-        <h3 class="header">Description</h3>
+        <h3>Description</h3>
         <p>When you don't have time to make your soup totally from scratch, this is a very easy, very good substitute.</p>
    
-        <h3 class="header">Ingredients</h3>
+        <h3>Ingredients</h3>
         <ul>
             <li>1 tablespoon butter</li>
             <li>1/2 cup chopped onion</li>
@@ -28,7 +28,7 @@
             <li>salt and pepper to taste</li>
         </ul>
 
-        <h3 class="header">Steps</h3>
+        <h3>Steps</h3>
         <ol>
             <li>In a large pot over medium heat, melt butter. Cook onion and celery in butter until just tender, 5 minutes. 
                 Pour in chicken and vegetable broths and stir in chicken, noodles, carrots, basil, oregano, salt and pepper. 
