--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -10,10 +10,10 @@
         <h1>Fluffy French Toast</h1>
         <img src="../images/frenchtoast.jpg">
 
-        <h3 class="header">Description</h3>
+        <h3>Description</h3>
         <p>This French toast recipe is different because it uses flour. I have given it to some friends and they've all liked it better than the French toast they usually make!</p>
    
-        <h3 class="header">Ingredients</h3>
+        <h3>Ingredients</h3>
         <ul>
             <li>1/4 cup all-purpose flour</li>
             <li>1 cup milk</li>
@@ -25,7 +25,7 @@
             <li>12 thick slices bread</li>
         </ul>
 
-        <h3 class="header">Steps</h3>
+        <h3>Steps</h3>
         <ol>
             <li>Measure flour into a large mixing bowl. Slowly whisk in the milk. Whisk in the salt, eggs, cinnamon, vanilla extract and sugar until smooth.</li>
             <li>Heat a lightly oiled griddle or frying pan over medium heat.</li>
